parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> type declaration_list SEMICOLON
Rule 2     statements -> type declaration_list COMMA declaration_list SEMICOLON
Rule 3     type -> INT
Rule 4     type -> FLOAT
Rule 5     type -> CHAR
Rule 6     type -> DOUBLE
Rule 7     declaration_list -> ID
Rule 8     declaration_list -> declaration_list COMMA ID

Terminals, with rules where they appear

CHAR                 : 5
COMMA                : 2 8
DOUBLE               : 6
FLOAT                : 4
ID                   : 7 8
INT                  : 3
SEMICOLON            : 1 2
error                : 

Nonterminals, with rules where they appear

declaration_list     : 1 2 2 8
statements           : 0
type                 : 1 2

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . type declaration_list SEMICOLON
    (2) statements -> . type declaration_list COMMA declaration_list SEMICOLON
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR
    (6) type -> . DOUBLE

    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5
    DOUBLE          shift and go to state 6

    statements                     shift and go to state 1
    type                           shift and go to state 2

state 1

    (0) S' -> statements .



state 2

    (1) statements -> type . declaration_list SEMICOLON
    (2) statements -> type . declaration_list COMMA declaration_list SEMICOLON
    (7) declaration_list -> . ID
    (8) declaration_list -> . declaration_list COMMA ID

    ID              shift and go to state 8

    declaration_list               shift and go to state 7

state 3

    (3) type -> INT .

    ID              reduce using rule 3 (type -> INT .)


state 4

    (4) type -> FLOAT .

    ID              reduce using rule 4 (type -> FLOAT .)


state 5

    (5) type -> CHAR .

    ID              reduce using rule 5 (type -> CHAR .)


state 6

    (6) type -> DOUBLE .

    ID              reduce using rule 6 (type -> DOUBLE .)


state 7

    (1) statements -> type declaration_list . SEMICOLON
    (2) statements -> type declaration_list . COMMA declaration_list SEMICOLON
    (8) declaration_list -> declaration_list . COMMA ID

    SEMICOLON       shift and go to state 9
    COMMA           shift and go to state 10


state 8

    (7) declaration_list -> ID .

    SEMICOLON       reduce using rule 7 (declaration_list -> ID .)
    COMMA           reduce using rule 7 (declaration_list -> ID .)


state 9

    (1) statements -> type declaration_list SEMICOLON .

    $end            reduce using rule 1 (statements -> type declaration_list SEMICOLON .)


state 10

    (2) statements -> type declaration_list COMMA . declaration_list SEMICOLON
    (8) declaration_list -> declaration_list COMMA . ID
    (7) declaration_list -> . ID
    (8) declaration_list -> . declaration_list COMMA ID

    ID              shift and go to state 12

    declaration_list               shift and go to state 11

state 11

    (2) statements -> type declaration_list COMMA declaration_list . SEMICOLON
    (8) declaration_list -> declaration_list . COMMA ID

    SEMICOLON       shift and go to state 14
    COMMA           shift and go to state 13


state 12

    (8) declaration_list -> declaration_list COMMA ID .
    (7) declaration_list -> ID .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 7 (declaration_list -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 7 (declaration_list -> ID .)
    SEMICOLON       reduce using rule 7 (declaration_list -> ID .)
    COMMA           reduce using rule 7 (declaration_list -> ID .)

  ! SEMICOLON       [ reduce using rule 8 (declaration_list -> declaration_list COMMA ID .) ]
  ! COMMA           [ reduce using rule 8 (declaration_list -> declaration_list COMMA ID .) ]


state 13

    (8) declaration_list -> declaration_list COMMA . ID

    ID              shift and go to state 15


state 14

    (2) statements -> type declaration_list COMMA declaration_list SEMICOLON .

    $end            reduce using rule 2 (statements -> type declaration_list COMMA declaration_list SEMICOLON .)


state 15

    (8) declaration_list -> declaration_list COMMA ID .

    SEMICOLON       reduce using rule 8 (declaration_list -> declaration_list COMMA ID .)
    COMMA           reduce using rule 8 (declaration_list -> declaration_list COMMA ID .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 12 resolved using rule (declaration_list -> ID)
WARNING: rejected rule (declaration_list -> declaration_list COMMA ID) in state 12
